--- a/webportal/webapp/src/index.html
+++ b/webportal/webapp/src/index.html
@@ -10,7 +10,10 @@
 <body>
       <app-root>
           <div style="padding: 20%;text-align:center;">
-              <h3>Loading ...</h3>
+              <h3>
+                    <img src="../../assets/images/dot-logo.png"> <br><br>
+                  Loading
+              </h3>
           </div>
       </app-root>
 </body>
