--- a/webportal/webapp/src/index.html
+++ b/webportal/webapp/src/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>DOT SDC Portal</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>DOT SDC Portal</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 </head>
 <body>
       <app-root>
           <div style="padding: 20%;text-align:center;">
               <h3>
-                    <img src="../../assets/images/dot-logo.png"> <br><br>
-                  Loading
+                <img src="../../assets/images/dot-logo.png"> <br><br>
+                Loading
               </h3>
           </div>
       </app-root>
