--- a/webportal/webapp/src/index.html
+++ b/webportal/webapp/src/index.html
@@ -13,8 +13,7 @@
       <app-root>
           <div style="padding: 20%;text-align:center;">
               <h3>
-                <img src="../../assets/images/dot-logo.png"> <br><br>
-                Loading
+                Loading ...
               </h3>
           </div>
       </app-root>
