--- a/webportal/webapp/src/index.html
+++ b/webportal/webapp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>DOT SDC Portal</title>
+    <title>Secure Data Commons - U.S.Department of Transportation</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
